# HoroscopeBot

./: .example.env  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2f27c099936e_init.py  80c0899967a3_init.py  c4d00c4952d2_init.py  fce5aaa00cff_init.py
app/: main.py  states.py
app/dao/: __init__.py  base.py  holder.py  horoscope.py  message.py  user.py
app/dialogs/: __init__.py  utils.py
app/dialogs/horoscope/: __init__.py  dialogs.py  getters.py
app/dialogs/register/: __init__.py  dialogs.py  getters.py  handlers.py
app/handlers/: __init__.py  change_zodiac.py  clear_history.py  start.py  unknown_text.py  update.py
app/middlewares/: __init__.py  db_middleware.py  message_middleware.py
app/models/: __init__.py
app/models/db/: __init__.py  base.py  horoscope.py  message.py  user.py
app/models/dto/: __init__.py  horoscope.py  message.py  user.py
app/scheduler/: __init__.py  tasks.py
app/services/: horoscope.py  message.py  register.py
